test/pass/api/list/list_fill_with_integer.lly
if list::fill(5, 10) != [10, 10, 10, 10, 10]:
    stderr.write("Failed.\n")
