test/fail/basic_syntax/assign_in_condition.lly
#[
SyntaxError: Conditional expression has no value.
    from assign_in_condition.lly:8
]#

var a = 10

if a = 10:
    print("Failed!\n")
